pictures and sections are created

--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -1,11 +1,58 @@
-\documentclass[10pt,a4paper]{article}
+\documentclass[10pt,a4paper]{report}
 \usepackage[latin1]{inputenc}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\author{Seth Bertlshofer}
+\author{Seth Bertlshofer\\Alexis Tyler\\Dustin Ginos\\Kevin Burgon}
 \title{Desc. Experience 1}
+\graphicspath{{img/}}
 \begin{document}
+	\maketitle
+	\textbf{Sub-Experience One: Fun and Games}\\
+		\begin{center}
+			\includegraphics[scale=.5]{e1.png}
+			\newline
+			\newline
+		\end{center}
+
+	\textbf{Sub-Experience Two: The Binary Addressing Graph}\\
 	
+		\begin{center}
+			%\includegraphics[scale=.5]{.png}
+
+		\end{center}
+	\textbf{Sub-Experience Three: Space Station Problems}\\
+	
+		\begin{center}
+			\includegraphics[scale=.5]{e3.png}
+			\newline
+			\newline
+		\end{center}
+	\textbf{Sub-Experience Four: Regions Determined by Chords of a Circle}\\
+	
+		\begin{center}
+			%\includegraphics[scale=.5]{.png}
+	
+		\end{center}
+	\textbf{Sub-Experience Five: Survivors in a Tournament.}\\
+	
+		\begin{center}
+			\includegraphics[scale=.5]{e5.png}
+			\newline
+			\newline
+		\end{center}
+	\textbf{Sub-Experience Six: Better-Than-Good Will Hunting}\\
+	
+		\begin{center}
+			\includegraphics[scale=.5]{e6.png}
+			\newline
+			\newline
+		\end{center}
+	\textbf{[Bonus] Sub-Experience Seven: A Matter of Life and Death}\\	
+	
+		\begin{center}
+			%\includegraphics[scale=.5]{.png}
+
+		\end{center}
 \end{document}
