added karnaugh map and preliminary solution to 2

--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -11,17 +11,23 @@
 	\maketitle
 	\textbf{Sub-Experience One: Fun and Games}\\
 		\begin{center}
+			Figure 1.\\
 			\includegraphics[scale=.5]{e1.png}
 			\newline
 			\newline
 		\end{center}
 
 	\textbf{Sub-Experience Two: The Binary Addressing Graph}\\
-	
-		\begin{center}
-			%\includegraphics[scale=.5]{.png}
-
-		\end{center}
+		\begin{enumerate}
+			\item |V($Q_n$)| = $2^n$
+			\begin{center}
+				Figure 2.\\
+				\includegraphics[scale=.5]{2_1.png}
+			\end{center}
+			Because this solution is looking for a binary power we can prove this with a Karnaugh Map (Figure 2) What this shows in the relation between the vertices.  If there is a relation then 1's will be adjacent to one another.  We can see that because the pattern is that is created by the Karnaugh map there can be no relations between vertices. 
+		\end{enumerate}
+		
+		
 	\textbf{Sub-Experience Three: Space Station Problems}\\
 	
 		\begin{center}
@@ -43,7 +49,9 @@
 			\newline
 		\end{center}
 	\textbf{Sub-Experience Six: Better-Than-Good Will Hunting}\\
+		Verify that the graph G (below) has a diameter of 2.
 	
+		By using Lemma 2 we can prove that this graph does indeed have a diameter of 2.  
 		\begin{center}
 			\includegraphics[scale=.5]{e6.png}
 			\newline
