wrote rough draft for problem 1

--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -15,6 +15,10 @@
 			\newline
 			\newline
 		\end{center}
+		
+	\textbf{Solution: }Player $A$ can always win if she employs a particular strategy for each move.  Let $G = (V, E)$ be a NIM graph where $x, y, z \in V$ ($V$ being the set of vertices in $G$) and $xy, yz, zx \in E$.  Assume that the graph never has the same number of edges between all vertices. The strategy that will be used is this: For each turn, player $A$ removes edges on one vertex such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$, where $|E|$ is the number of edges between two vertices. Since the rule of the game is that the winner is the player who removes the last edge, we know that the winner is also the one who removes the second to last edge.  If that is the case, then the player who removes edge that breaks the cycle in the graph loses. The player that is forced to break the cycle is also the player who is forced to remove an edge such that either $|xy| = 1$, $|yz| = 1$, or $|zx| = 1$.  In order for player $A$ to force player $B$ to do that, player $A$ needs to force player $B$ to remove an edge from the pair of vertices with the minimum number of edges.  In order to do that, player $A$ needs to remove edges on every turn such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$. Therefore, if the graph is such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$, player $B$ is forced to remove edges until they break the cycle, and player $A$ will always win.\\
+	
+	%In that case, the strategy consists in leaving the graph such that player $B$ is forced to remove an edge that breaks the cycle.  In order to accomplish that the goal is also to force player $B$ to remove edges until they end a turn where $|xy| = 1$, $|yz| = 1$, or $|zx| = 1$.  In order to accomplish this player $A$ needs to avoid removing edges from the pair of vertices with the minimum number of edges.  If player $A$ never removes edges from the pair of vertices with the minimum number of edges player $B$ is forced to do so, therefore causing player $B$ to eventually remove an edge that results in a pair of vertices with only one edge between them.  In order for player $A$ to avoid  removing from the minimum number of edges, player $A$ always needs to remove edges such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$.\\
 
 	\textbf{Sub-Experience Two: The Binary Addressing Graph}\\
 	
