finished section 2 sections

--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -17,14 +17,17 @@
 			\newline
 		\end{center}
 
-	\textbf{Sub-Experience Two: The Binary Addressing Graph}\\
+	\textbf{Sub-Experience Two: The Binary Addressing Graph}
 		\begin{enumerate}
-			\item |V($Q_n$)| = $2^n$
+			\item $|V(Q_n)| = 2^n$
 			\begin{center}
 				Figure 2.\\
 				\includegraphics[scale=.5]{2_1.png}
 			\end{center}
-			Because this solution is looking for a binary power we can prove this with a Karnaugh Map (Figure 2) What this shows in the relation between the vertices.  If there is a relation then 1's will be adjacent to one another.  We can see that because the pattern is that is created by the Karnaugh map there can be no relations between vertices. 
+			Because this solution is looking for a binary power we can prove this with a Karnaugh Map (Figure 2) What this shows in the relation between the vertices.  If there is a relation then 1's will be adjacent to one another.  We can see that because the pattern is that is created by the Karnaugh map there can be no relations between vertices.
+			\item $Q_n$ is an n-regular graph: that is, $deg (\vec{v}) = n $ for each $\vec{v} \epsilon V(Q_n)$.
+			\item $Q_n$ is \textit{bipartite}; that is, $V(Q_n)$ consists of two sets, say X and Y such that $X\cap Y = \varnothing$ and the only edges of $Q_n$ have one end-vertex in X and the other in Y (so X and Y induce graphs with no edges).
+			\item $Q_n$ is Hamiltonian for $n \geq 2$.
 		\end{enumerate}
 		
 		
