--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -38,6 +38,7 @@
 	\textbf{Sub-Experience Three: Space Station Problems}\\
 	
 		\begin{center}
+			Figure 3.\\
 			\includegraphics[scale=.5]{e3.png}
 			\newline
 			\newline
@@ -49,8 +50,11 @@
 	
 		\end{center}
 	\textbf{Sub-Experience Five: Survivors in a Tournament.}\\
-	
+		As we look at Figure 4. This is the best way to explain how to prove this.  If we start making queens of 7 in the tournament (which is the least amount that any vertex can have to win) and work CW we end up with 3 queens. Now if we to to our original starting vertex and work CCW we find 2 more queens of 7.  We then end up with 5 queens after the first round.  Therefore, the max number of teams that will remain after the first elimination round will be 5.\\
+		\newline
+		For the second round if we keep the same pattern but with queens of 3 (which is the "majority" number to win) We will find that there ends up being 3 queens.Therefore, the max number of teams that will remain after the second round will be 3.\\
 		\begin{center}
+			Figure 4.\\
 			\includegraphics[scale=.5]{e5.png}
 			\newline
 			\newline
@@ -60,6 +64,7 @@
 	
 		By using Lemma 2 we can prove that this graph does indeed have a diameter of 2.  
 		\begin{center}
+			Figure 5.\\
 			\includegraphics[scale=.5]{e6.png}
 			\newline
 			\newline
