--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -18,12 +18,13 @@
 		\end{center}
 		
 	\textbf{Solution: }Player $A$ can always win if she employs a particular strategy for each move.  Let $G = (V, E)$ be a NIM graph where $x, y, z \in V$ ($V$ being the set of vertices in $G$) and $xy, yz, zx \in E$.  Assume that the graph never has the same number of edges between all vertices. The strategy that will be used is this: For each turn, player $A$ removes edges on one vertex such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$, where $|E|$ is the number of edges between two vertices. Since the rule of the game is that the winner is the player who removes the last edge, we know that the winner is also the one who removes the second to last edge.  If that is the case, then the player who removes edge that breaks the cycle in the graph loses. The player that is forced to break the cycle is also the player who is forced to remove an edge such that either $|xy| = 1$, $|yz| = 1$, or $|zx| = 1$.  In order for player $A$ to force player $B$ to do that, player $A$ needs to force player $B$ to remove an edge from the pair of vertices with the minimum number of edges.  In order to do that, player $A$ needs to remove edges on every turn such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$. Therefore, if the graph is such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$, player $B$ is forced to remove edges until they break the cycle, and player $A$ will always win.\\
-	
-	%In that case, the strategy consists in leaving the graph such that player $B$ is forced to remove an edge that breaks the cycle.  In order to accomplish that the goal is also to force player $B$ to remove edges until they end a turn where $|xy| = 1$, $|yz| = 1$, or $|zx| = 1$.  In order to accomplish this player $A$ needs to avoid removing edges from the pair of vertices with the minimum number of edges.  If player $A$ never removes edges from the pair of vertices with the minimum number of edges player $B$ is forced to do so, therefore causing player $B$ to eventually remove an edge that results in a pair of vertices with only one edge between them.  In order for player $A$ to avoid  removing from the minimum number of edges, player $A$ always needs to remove edges such that $|xy| = |yz|$, $|yz| = |zx|$, and $|zx| = |xy|$.\\
 
 	\textbf{Sub-Experience Two: The Binary Addressing Graph}
 		\begin{enumerate}
 			\item $|V(Q_n)| = 2^n$
+			
+			\item[] \textbf{Solution: }Let $Q_{n}$ be the graph whose vertices are all the binary strings of length $n$, and a vertex can be represented as $\vec{v} = \{v_{1}, v_{2}, ..., v_{n}\}$.  We know that if the vertices in $Q_{n}$ are binary strings of length 1 there are only two different vertices: 0 and 1.  Now assume that the vertices in $Q_{n}$ are strings of length 2.  Again by nature of the binary number system there are two possibilities for the values of each digit, so for a binary string of length 2 there would be two possibilities of two possibilities, or $2*2=4$ or $2^{2}$ possibilities.  Therefore we see that $|V(Q_{2})| = 2^{2}$. By nature of the number of values in a binary digit there will always be two possibilities for each digit, so therefore $|V(Q_{2})|$ is $2 * 2$ $n$ times or $|V(Q_{n})|=2^{n}$
+			
 			\begin{center}
 				Figure 2.\\
 				\includegraphics[scale=.5]{2_1.png}
@@ -31,6 +32,9 @@
 			Because this solution is looking for a binary power we can prove this with a Karnaugh Map (Figure 2) What this shows in the relation between the vertices.  If there is a relation then 1's will be adjacent to one another.  We can see that because the pattern is that is created by the Karnaugh map there can be no relations between vertices.
 			\item $Q_n$ is an n-regular graph: that is, $deg (\vec{v}) = n $ for each $\vec{v} \epsilon V(Q_n)$.
 			\item $Q_n$ is \textit{bipartite}; that is, $V(Q_n)$ consists of two sets, say X and Y such that $X\cap Y = \varnothing$ and the only edges of $Q_n$ have one end-vertex in X and the other in Y (so X and Y induce graphs with no edges).
+			
+			\item[]\textbf{Solution: }Assume each vertex in $Q_{n}$ is a binary string of length 1.  It is easy to see that $Q_{n}$ is bipartite in this case because the vertices differ by one digit.  Now if we are to assume that each vertex in $Q_{n}$ is a binary string of length 2, 
+			
 			\item $Q_n$ is Hamiltonian for $n \geq 2$.
 		\end{enumerate}
 		
