wrote out experience 2 part 2

--- a/desc_experience1.tex
+++ b/desc_experience1.tex
@@ -31,6 +31,9 @@
 			\end{center}
 			Because this solution is looking for a binary power we can prove this with a Karnaugh Map (Figure 2) What this shows in the relation between the vertices.  If there is a relation then 1's will be adjacent to one another.  We can see that because the pattern is that is created by the Karnaugh map there can be no relations between vertices.
 			\item $Q_n$ is an n-regular graph: that is, $deg (\vec{v}) = n $ for each $\vec{v} \epsilon V(Q_n)$.
+			
+			\item[] By what whas stated in meeting 16, the degree of a graph is the number of edges that it has connected to it (or in other words the number of vertices of which it is directly adjacent to).  With this in mind we will look at the graph $Q_{n}$.  The graph $Q_{n}$ is a graph whose vertices are all the binary strings of length $n$ and vertices are adjacent if and only if they differ in exactly one bit.  Because vertices are only adjacent if and only if they differ in exactly one bit, the number of possibilities of vertices different from an arbitrary vertex $v_{n}\in Q_{n}$ is one for each digit in the vertex's binary string.  As an example without loss of generality, the vertex 00 is different by exactly one bit from 01 and 10 only in graph $Q_{2}$.  Since there are only $n$ different places in which a vertex in graph $Q_{n}$ can be different from another vertex by exactly one bit, and since we know by definition of graph $Q_{n}$ that every possible combination of bits is represented by a vertex, we therefore know that the graph $deg(Q_{n})=n$, and that $Q_{n}$ is a $n$-regular graph.
+			
 			\item $Q_n$ is \textit{bipartite}; that is, $V(Q_n)$ consists of two sets, say X and Y such that $X\cap Y = \varnothing$ and the only edges of $Q_n$ have one end-vertex in X and the other in Y (so X and Y induce graphs with no edges).
 			
 			\item[]\textbf{Solution: }Assume $Q_{n}=(V, E)$ is a graph of binary strings with a length of 1 ($Q_{1}$), where $v_{1}, v_{2}$ are vertices in $Q_{1}$ and $\vec{v}_{1} = 0$ and $\vec{v}_{2} = 1$.  It is easy to see that $Q_{n}$ is bipartite in this case because the vertices differ by one one (so $\vec{v}_{1}\vec{v}_{2}\in E$), so we can say that  $\vec{v}_{1}\in X$ and $\vec{v}_{2}\in Y$.  In order to convert $Q_{1}$ into a $Q_{2}$, $\vec{v}_{1}$ and $\vec{v}_{2}$ need to be converted to vertices with binary string length of 2.  This makes it so in $Q_{2}=(V, E)$, $V = \{\vec{v}_{1}, \vec{v}_{2}, \vec{v}_{3}, \vec{v}_{4}\}$ where $\vec{v}_{1}=00$, $\vec{v}_{2}=01$, $\vec{v}_{3}=10$, $\vec{v}_{4}=11$.  Notice that vertices $\vec{v}_{1}$ and $\vec{v}_{2}$ from $Q_{2}$ carry the same properties as $v_{1}$ and $v_{2}$ from $Q_{1}$, where $\vec{v}_{1}\vec{v}_{2}\in E$ (00 and 01 differ by 1).  Vertices $\vec{v}_{3}$ and $\vec{v}_{4}$ also carry that property (10 and 11 differ by 1), but $\vec{v}_{1}$ and $v_{3}$, and $\vec{v}_{2}$ and $v_{4}$ differ by 2.  We can also see that $Q_{2}$ is bipartite, where $\vec{v}_{1}, \vec{v}_{3}\in X$ and $\vec{v}_{2}, \vec{v}_{4}\in Y$.  When constructing graph $Q_{3}$ we can see that all the vertices where the most sigificant digit is 0 follow the same properties as $Q_{2}$, and the same properties also exist in all the vertices where the most significant digit is 1.  Since the only thing that changes between the vertices with the most significant digit of 1 and the most significant digit of 0
